--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#0048d9</color>
     <color name="colorPrimaryDark">#003399</color>
+    <color name="colorred">#c53923</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -9,5 +10,6 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#373737</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
