--- a/app/src/main/res/layout/activity_juego_pulsar.xml
+++ b/app/src/main/res/layout/activity_juego_pulsar.xml
@@ -57,4 +57,20 @@
         app:layout_constraintStart_toEndOf="@+id/btn_pausa"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_continuar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/continuar"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintWidth_percent="0.25" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
