--- a/app/src/main/res/layout/jugador_con_puntos_item_list.xml
+++ b/app/src/main/res/layout/jugador_con_puntos_item_list.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,7 +11,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:background="@color/colorPrimaryDark"
@@ -21,7 +22,7 @@
         app:layout_constraintWidth_percent="0.7">
 
         <TextView
-            android:id="@+id/tv_nombre"
+            android:id="@+id/tv_nombreJuego"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nombre"
@@ -30,7 +31,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_alias"
+            android:id="@+id/tv_aliasJuego"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="direccion"
@@ -39,13 +40,13 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_puntos"
+        android:id="@+id/tv_puntosJuego"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryMoreDark"
         android:gravity="center"
         android:text="15"
-        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:textColor="@color/colorred"
         android:textSize="30sp"
         android:textStyle="bold"
