--- a/app/src/main/res/layout/activity_sala_espera.xml
+++ b/app/src/main/res/layout/activity_sala_espera.xml
@@ -14,7 +14,7 @@
         android:background="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.6"
+        app:layout_constraintHeight_percent="0.8"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,10 +28,11 @@
             android:text="@string/reglas_del_juego"
             android:textColor="@color/colorred"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/tv_descripcionJuego"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_descripcionJuego"
             app:layout_constraintStart_toStartOf="@+id/tv_descripcionJuego"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nombreJuego" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.206" />
 
         <TextView
             android:id="@+id/tv_nJugadores"
@@ -59,7 +60,7 @@
             app:layout_constraintHeight_percent="0.6"
             app:layout_constraintHorizontal_bias="0.518"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nombreJuego"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
             app:layout_constraintWidth_percent="0.9" />
 
         <TextView
@@ -81,10 +82,12 @@
         android:id="@+id/rv_listaJugadores"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="11dp"
         android:background="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintBottom_toTopOf="@+id/btn_atras"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="@+id/btn_atras"
+        app:layout_constraintTop_toBottomOf="@+id/tv_1"
         app:layout_constraintWidth_percent="0.37" />
 
     <Button
@@ -121,12 +124,10 @@
         android:id="@+id/tv_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
         android:text="@string/jugadores"
         android:textColor="@color/colorred"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/rv_listaJugadores"
         app:layout_constraintEnd_toEndOf="@+id/rv_listaJugadores"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/rv_listaJugadores"
